# EASM

./: .dockerignore  .gitignore  FINDING_FILTER_IMPLEMENTATION.md  FINDING_FILTER_QUICK_START.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example.env  task-list.md  tech.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  check_output.txt  check_output_final.txt  check_output_final_2.txt  requirements.txt
backend/app/: __init__.py  config.py  db.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  modules.py  repos.py  search.py  utils.py  validators.py
backend/app/services/: discovery_service.py  scan_service.py
backend/migrations/: 002_finding_filter_indexes.sql  003_add_asset_lineage.sql  004_auth.sql  005_risk_extensions.sql  006_add_password_column.sql  007_fix_admin_password.sql  008_seed_note_column.sql  009_discovery_refactor.sql  010_app_settings.sql  011_fix_app_settings_constraint.sql  012_user_management.sql  013_tags.sql  014_blacklist.sql  015_finding_type_config.sql  016_companies.sql  017_discovery_companies.sql  018_security_companies.sql  019_findings_company_id.sql  020_blacklist_companies.sql  021_tags_companies.sql
backend/src/: config.rs  database.rs  error.rs  lib.rs  main.rs
backend/src/auth/: context.rs  identity_provider.rs  mod.rs  rbac.rs  session.rs
backend/src/config/: managed.rs  secure_store.rs  store.rs  tests.rs
backend/src/handlers/: admin_handlers.rs  asset_handlers.rs  auth_handlers.rs  blacklist_handlers.rs  company_handlers.rs  discovery_handlers.rs  drift_handlers.rs  evidence_handlers.rs  finding_handlers.rs  finding_type_config_handlers.rs  health_handlers.rs  metrics_handlers.rs  mod.rs  risk_handlers.rs  scan_handlers.rs  search_handlers.rs  security_handlers.rs  settings_handlers.rs  static_handlers.rs  tag_handlers.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  security.rs
backend/src/models/: asset.rs  blacklist.rs  company.rs  discovery.rs  evidence.rs  finding.rs  finding_type_config.rs  mod.rs  scan.rs  security.rs  tag.rs
backend/src/repositories/: asset_repo.rs  blacklist_repo.rs  company_repo.rs  discovery_repo.rs  evidence_repo.rs  finding_repo.rs  finding_type_config_repo.rs  mod.rs  scan_repo.rs  security_repo.rs  seed_repo.rs  settings_repo.rs  tag_repo.rs  user_repo.rs
backend/tests/: api_compatibility_tests.rs  conftest.py  database_schema_tests.rs  end_to_end_tests.rs  integration_test.rs  load_tests.rs  path_tracing_integration.rs  request_response_format_tests.rs  test_api.py
(+104 files in other folders)
